<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_stats"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_cards"
            android:title="@string/menu_cards" />
        <item
            android:id="@+id/nav_numbers"
            android:icon="@drawable/ic_numbers"
            android:title="@string/menu_numbers" />
        <item
            android:id="@+id/nav_faces"
            android:icon="@drawable/ic_faces"
            android:title="@string/menu_faces" />
        <item
            android:id="@+id/nav_binary"
            android:icon="@drawable/ic_binary_numbers"
            android:title="@string/menu_binary_numbers" />
        <item
            android:id="@+id/nav_words"
            android:icon="@drawable/ic_words"
            android:title="@string/menu_words" />
    </group>
</menu>