<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_cards"
        android:name="com.example.memorybootcamp.ui.home.HomeFragment"
        android:label="@string/menu_cards"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.memorybootcamp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_numbers"
        android:name="com.example.memorybootcamp.ui.gallery.GalleryFragment"
        android:label="@string/menu_numbers"
        tools:layout="@layout/fragment_numbers" />

    <fragment
        android:id="@+id/nav_faces"
        android:name="com.example.memorybootcamp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_faces"
        tools:layout="@layout/fragment_cards" />
</navigation>