<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/challenge_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.challenges.binary.BinaryFragment">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/menu_binary_numbers"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progress_chart" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/progress_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/binary_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />


    <LinearLayout
        android:id="@+id/binary_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:text="@string/start_binary_challange"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_chart">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:maxWidth="20dp"
            android:maxHeight="20dp"
            android:rotation="-30"
            android:rotationY="180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bullhorn"
            android:contentDescription="@string/desc_bullhorn"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/tvSearchCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/start_binary_challange"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:maxWidth="20dp"
            android:maxHeight="20dp"
            android:rotation="-30"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bullhorn"
            android:contentDescription="@string/desc_bullhorn"
            app:tint="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>